add 3 enemies using classes and child classes to prevent code duplication

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enemy Types with JavaScript Sub Classing</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <canvas id="canvas1"></canvas>
+    <img src="enemy_worm.png" alt="enemy worm" id="worm" />
+    <img src="enemy_ghost.png" alt="enemy ghost" id="ghost" />
+    <img src="enemy_spider.png" alt="eney spider" id="spider" />
   </body>
 </html>
